--- a/Arbkrav5.qmd
+++ b/Arbkrav5.qmd
@@ -14,9 +14,9 @@ Det er flere studier som har undersøkt hvilken forskjell ett sett og tre sett u
 
 Med vissheten om denne kunnskapen er hensikten med denne studien å undersøke forskjellen, eventuelt hvor stor forskjellen er, på styrketrening med ett sett eller tre sett, på voksne kvinner og menns utvikling av styrke og muskelmasse.
 
-## Metode 
+## Metode
 
-#### Deltakerne
+## Deltakerne
 
 Det ble rekruttert 41 kvinner og menn med alder 18-40 år til å delta i studien. Deltakerne måtte være ikke-røykere, ikke ha trent mer enn en økt i uka de siste 12 månedene, ikke ha fysiske skader som hindret de i å gjennomføre treningen, ikke være allergisk mot bedøvelse, og heller ikke bruke medisiner som kunne påvirke treningsadapsjonene. Grunnet at deltakerne ikke hadde gjennomført mer enn 85% av øktene av ulike årsaker, ble syv deltakere ekskludert fra dataanalysene.
 
@@ -27,7 +27,6 @@ data("dxadata"); data("strengthvolume")
 
 
 ```
-
 
 ```{r}
 
@@ -84,16 +83,16 @@ dxadata %>%
 ```
 
 ## Styrketrening
-Treningsintervensjonen bestod av 12 uker styrketrening for hele kroppen med en belastning på 7-10 RM. Øvelsene på underkroppen ble utført unilateralt, altså at ett ben jobber om gangen, for å kunne gjøre within subject differensiering på treningsvolum. Hvilket ben som skulle ha ett sett, og hvilket som skulle ha tre sett, ble bestemt tilfeldig. Pre og post intervensjon ble muskelstyrke målt, samt ved uke 3, 5, og 9. Pre og post ble også kroppsammensetning målt. 
+
+Treningsintervensjonen bestod av 12 uker styrketrening for hele kroppen med en belastning på 7-10 RM. Øvelsene på underkroppen ble utført unilateralt, altså at ett ben jobber om gangen, for å kunne gjøre within subject differensiering på treningsvolum. Hvilket ben som skulle ha ett sett, og hvilket som skulle ha tre sett, ble bestemt tilfeldig. Pre og post intervensjon ble muskelstyrke målt, samt ved uke 3, 5, og 9. Pre og post ble også kroppsammensetning målt.
 
 ## Tester
-Muskelstyrke ble målt som maksimal styrke, derav en repetisjon maksimum (1RM) i unilateral benpress. Testen hadde en standardisert oppvarming, som bestod av (estimert) 50, 75 og 85% av 1RM. Motstanden økte gradvis helt til deltakeren ikke klarte å gjennomføre en repetisjon, og fikk 4-6 forsøk. Den høyeste vekten deltakeren klarte ble deres 1RM. 
-Kroppsammensetning ble målt med Dual Energy x-ray Absorptiometry (DXA) ved hjelp av en standardisert protokoll. Deltakerne kom fastende og hadde ikke gjennomført noe anstrengende aktivitet siste 48 timene. 
 
+Muskelstyrke ble målt som maksimal styrke, derav en repetisjon maksimum (1RM) i unilateral benpress. Testen hadde en standardisert oppvarming, som bestod av (estimert) 50, 75 og 85% av 1RM. Motstanden økte gradvis helt til deltakeren ikke klarte å gjennomføre en repetisjon, og fikk 4-6 forsøk. Den høyeste vekten deltakeren klarte ble deres 1RM. Kroppsammensetning ble målt med Dual Energy x-ray Absorptiometry (DXA) ved hjelp av en standardisert protokoll. Deltakerne kom fastende og hadde ikke gjennomført noe anstrengende aktivitet siste 48 timene.
 
 ## Data
-Det ble gjennomført en parret t-test på differansen mellom ett og tre sett på lean mass i bena, og på differansen mellom ett og tre sett på 1RM unilateral benpress. Figurene viser den gjennomsnittlige endringen fra pre til post i absolutte verdier for både ett og tre sett i lean mass og 1 RM i unilateralt beinpress.
-Data er analysert ved bruk av RStudio 2024.04.2. 
+
+Det ble gjennomført en parret t-test på differansen mellom ett og tre sett på lean mass i bena, og på differansen mellom ett og tre sett på 1RM unilateral benpress. Figurene viser den gjennomsnittlige endringen fra pre til post i absolutte verdier for både ett og tre sett i lean mass og 1 RM i unilateralt beinpress. Data er analysert ved bruk av RStudio 2024.04.2.
 
 ```{r}
 
@@ -163,6 +162,7 @@ tt.strength <- with(strength.ttest, t.test(multiple, single, paired = TRUE))
 p.strength <- round(tt.strength$p.value, 3)
 
 ```
+
 ```{r}
 lean.fig <- dxadata %>%
   select(participant:include, lean.left_leg, lean.right_leg) %>%
@@ -188,7 +188,7 @@ lean.fig <- dxadata %>%
 lean.fig
 ```
 
-Resultatene fra den parrede t-testen viser at et er en signifikant forskjell mellom ett og tre sett på lean mass i bena med en p-verdi på 0.036 `r p.lean`. Figuren viser at begge bena hadde tilnærmet likt utgangspunkt ved pre-test. Begge bena har hatt fremgang, men tre sett har en større økning enn ett sett. 
+Resultatene fra den parrede t-testen viser at et er en signifikant forskjell mellom ett og tre sett på lean mass i bena med en p-verdi på 0.036. Figuren viser at begge bena hadde tilnærmet likt utgangspunkt ved pre-test. Begge bena har hatt fremgang, men tre sett har en større økning enn ett sett.
 
 ```{r}
 
@@ -217,17 +217,13 @@ str.fig
 
 ```
 
-Resultatene fra den parrede t-testen viser at det er en signifikant forskjell mellom ett og tre sett på maskimal styrke i unilateral benpress med p-verdi på `r p.strength`. Figuren viste at begge bena var tilnærmet like sterke ved pre-test. Begge bena hadde fremgang, men tre sett hadde en større økning i maksimal styrke enn ett sett. 
-
+Resultatene fra den parrede t-testen viser at det er en signifikant forskjell mellom ett og tre sett på maskimal styrke i unilateral benpress med p-verdi på 0,025. Figuren viste at begge bena var tilnærmet like sterke ved pre-test. Begge bena hadde fremgang, men tre sett hadde en større økning i maksimal styrke enn ett sett.
 
 ## Diskusjon
-I denne studien ble det undersøkt forskjellen mellom ett sett og tre sett i styrketrening utgjorde på muskelmasse og maksimal styrke i bena hos 34 voksne kvinner og menn, besvart med at tre sett ga en større økning i maksimal styrke og muskelmasse. 
-Resultatene viste at benet som trente tre sett hadde en signifikant større endring i maksimal styrke i unilateral benpress og lean mass enn benet som trente ett sett.
-Resultatene stemmer overens med Krieger (2010) og Krieger (2009) som også fant at styrketrening med moderat volum ga bedre effekt på muskelmasse og -styrke enn styrketrening med lavt volum. 
-De fysiologiske prosessene som foregår i kroppen når man trener styrke ser ut til å bli påvirket av mer enn bare styrketreningen man gjør, men også av treningsvolumet, der et høyere volum er å foretrekke fremfor et lavere volum (Schoenfeld et al., 2016).
 
-Til tross for dette hadde også benet som kun trente ett sett, god fremgang i både maksimal styrke og muskelmasse. Det er altså ikke bortkastet å kun trene ett sett, men det er bedre å trene tre sett enn ett sett. 
+I denne studien ble det undersøkt forskjellen mellom ett sett og tre sett i styrketrening utgjorde på muskelmasse og maksimal styrke i bena hos 34 voksne kvinner og menn, besvart med at tre sett ga en større økning i maksimal styrke og muskelmasse. Resultatene viste at benet som trente tre sett hadde en signifikant større endring i maksimal styrke i unilateral benpress og lean mass enn benet som trente ett sett. Resultatene stemmer overens med Krieger (2010) og Krieger (2009) som også fant at styrketrening med moderat volum ga bedre effekt på muskelmasse og -styrke enn styrketrening med lavt volum. De fysiologiske prosessene som foregår i kroppen når man trener styrke ser ut til å bli påvirket av mer enn bare styrketreningen man gjør, men også av treningsvolumet, der et høyere volum er å foretrekke fremfor et lavere volum (Schoenfeld et al., 2016).
 
+Til tross for dette hadde også benet som kun trente ett sett, god fremgang i både maksimal styrke og muskelmasse. Det er altså ikke bortkastet å kun trene ett sett, men det er bedre å trene tre sett enn ett sett.
 
 Referanser:
 
